--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-#scoreCanvas{position: absolute; top: 220px ; left : 1050px ; color: white}
+#scoreCanvas{position: absolute; top: 220px ; right : 20% ; color: white}
 
 #nextShapeCanvas{position: absolute; top: 10px ; left : 1050px ;}
 
