--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 #scoreCanvas{position: absolute; top: 220px ; right : 20% ; color: white}
 
-#nextShapeCanvas{position: absolute; top: 10px ; left : 1050px ;}
+#nextShapeCanvas{position: absolute; top: 10px ; right : 20% ;}
 
 #canvas{border: 3px white solid}
 
