--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
-#scoreCanvas{position: absolute; top: 220px ; right : 20% ; color: white}
+#scoreCanvas{position: absolute; top: 5% ; left: 27% ; color: white}
 
-#nextShapeCanvas{position: absolute; top: 10px ; right : 20% ;}
+#nextShapeCanvas{position: absolute; top: 0%; right : 20% ;}
 
 #canvas{border: 3px white solid}
-
-#playAgainButton{ position: absolute;top: 60%;right: 50%;}
+#gameoverdiv{position: absolute;top: 26%;left: 5%;width: 100%}
+#playAgainButton{ position: absolute;margin: 5.5%;top: 0% ;right:10% ;width: 300px}
 /*
 #playAgainButton:hover {
      background-color: #a0e7cf ;
@@ -235,8 +235,8 @@
     animation-duration: 1s; /* Ajustement de la durée de l'animation */
     animation-iteration-count: infinite;
     position: absolute;
-    top: 26%;
-    left: 50%;
+    /*top: 26%;*/
+    left: 0%;
 }
 
 @keyframes example {
